Prevent Git panel flicker during repo switch

--- a/styles/git-tab.less
+++ b/styles/git-tab.less
@@ -21,6 +21,10 @@
     color: @text-color-subtle;
   }
 
+  &.is-switching-repository {
+    pointer-events: none;
+  }
+
   &.no-repository,
   &.too-many-changes,
   &.unsupported-directory {
